Mejoras en ventanaArticulo y ventanInicial, y arreglo  tabla favoritos